--- a/pagina_principal.html
+++ b/pagina_principal.html
@@ -37,9 +37,7 @@
                 </article>
                 <article class="cuerpo__caja">
                     <h3 class="cuerpo__caja__subtitulo">¿Que es Sonic the Hedgehog?</h3>
-                    <a href="assets/img/sonic.jpg" class="cuerpo__caja__imagen-caja">
-                        <img src="assets/img/sonic.jpg" alt="Sonic" class="cuerpo__caja__imagen-caja__imagen">
-                    </a>
+                    <a href="assets/img/sonic.jpg" class="cuerpo__caja__imagen-caja"><img src="assets/img/sonic.jpg" alt="Sonic" class="cuerpo__caja__imagen-caja__imagen"></a>
                     <p class="cuerpo__caja__texto">Sonic the Hedgehog, es el protagonista principal de la saga de videojuegos del mismo nombre y la mascota de Sega. Él es un erizo antropomórfico nacido con la habilidad de correr más rápido que el sonido, de allí su nombre. Su mejor amigo es Tails</p>
                     <p class="cuerpo__caja__texto">Desde que entró en la batalla contra la injusticia, Sonic ha sido el vencedor de la paz y es reconocido en la Tierra por haberlo salvado incontables veces. Durante sus muchas aventuras, Sonic ha viajado desde los confines del mundo hasta los confines del espacio y del tiempo, enfrentando innumerables pruebas que lo han probado al máximo, ganándose muchos títulos, aliados y el desprecio de varios enemigos. Conocido por su legendaria actitud arrogante, tranquila y un temperamento algo corto, pero con un fuerte sentido de la justicia, la compasión y el amor por la libertad y la aventura, Sonic utiliza sus habilidades para proteger a los inocentes de su mundo y del más allá de las fuerzas del mal, especialmente de su archienemigo, el Dr. Eggman, y su imperio.</p>
                 </article>
