--- a/sonic_colors.html
+++ b/sonic_colors.html
@@ -31,33 +31,33 @@
             </header>
             <main class="cuerpo2">
                 <section class="cuerpo2__informacion-producto">
-                    <a href="assets/img/sonic_colors.jpg"  class="cuerpo2__informacion-producto__imagen-producto"><img src="assets/img/sonic_colors.jpg" alt="Sonic Colors" class="cuerpo2__informacion-producto__imagen-producto__imagen"></a>
+                    <a href="assets/img/sonic_colors.jpg" ><img src="assets/img/sonic_colors.jpg" alt="Sonic Colors" class="cuerpo2__informacion-producto__imagen-producto"></a>
                     <article class="cuerpo2__informacion-producto__descripcion-producto">
                         <h3 class="cuerpo2__informacion-producto__descripcion-producto__nombre-producto">Sonic colors</h3>
                         <p class="cuerpo2__informacion-producto__descripcion-producto__descripcion">Sonic Colors es un videojuego de la saga Sonic the Hedgehog. Es el último videojuego para Wii sobre Sonic. Se anunció por primera vez el 26 de mayo de 2010 en un comunicado de prensa por Sega para Italia, e incluyó un trailer del videojuego. Se estrenó el 11 de noviembre de 2010 en Australia, 12 de noviembre de 2010 en Europa, 16 de noviembre 2010 en América del Norte, y 18 de noviembre de 2010 en Japón. Además, Dimps desarrolló una versión alternativa del videojuego para Nintendo DS y la estrenó casi al mismo tiempo que su contraparte de Wii.</p>
                         <p class="cuerpo2__informacion-producto__descripcion-producto__descripcion">En Sonic Colors, Sonic y Tails investigan Egg Planet Park, donde el Dr. Eggman afirma al público que ha pasado página de su vida delictiva y ha creado un parque de diversiones para compensar sus acciones pasadas. Sin embargo, se revela que el parque es una tapadera para el villano, que ha arrastrado planetas de todo el universo hasta la Tierra y ha secuestrado a los nativos, una raza alienígena conocida como los Wisps. Con el poder de los Wisps, Sonic visita cada uno de los planetas para detener los planes del doctor de dominar el universo.</p>
-                        <p class="cuerpo2__informacion-producto__boton"><a href="./pagina_de_productos.html" class="cuerpo2__informacion-producto__boton__regreso">volver</a></p>
+                        <p><a href="./pagina_de_productos.html" class="cuerpo2__informacion-producto__boton">volver</a></p>
                     </article>
                 </section>
                 <h2 class="cuerpo2__titulo">OTROS PRODUCTOS</h2>
                 <section class="cuerpo2__productos">
                     <article class="cuerpo2__productos__producto">
                         <a href="assets/img/sonic_unleashed.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_unleashed.jpg" alt="Sonic Unleashed" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_unleashed.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic unleashed</a></h3>
+                        <h3><a href="./sonic_unleashed.html" class="cuerpo2__productos__producto__boton">Sonic unleashed</a></h3>
                     </article>
                     <article class="cuerpo2__productos__producto">
                         <a href="assets/img/sonic_mania.png" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_mania.png" alt="Sonic Mania" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_mania.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic mania</a></h3>
+                        <h3><a href="./sonic_mania.html" class="cuerpo2__productos__producto__boton">Sonic mania</a></h3>
                     </article>
                 </section>
                 <section class="cuerpo2__productos">
                     <article class="cuerpo2__productos__producto">
                         <a href="assets/img/sonic_superstars.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_superstars.jpg" alt="Sonic Superstars" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_superstars.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic superstars</a></h3>
+                        <h3><a href="./sonic_superstars.html" class="cuerpo2__productos__producto__boton">Sonic superstars</a></h3>
                     </article>
                     <article class="cuerpo2__productos__producto">
                         <a href="assets/img/sonic_forces.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_forces.jpg" alt="Sonic Forces" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_forces.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic forces</a></h3>
+                        <h3><a href="./sonic_forces.html" class="cuerpo2__productos__producto__boton">Sonic forces</a></h3>
                     </article>
                 </section>
             </main>
