--- a/sonic_lost_world.html
+++ b/sonic_lost_world.html
@@ -31,33 +31,33 @@
             </header>
             <main class="cuerpo2">
                 <section class="cuerpo2__informacion-producto">
-                    <a href="assets/img/sonic_lost_world.jpg"  class="cuerpo2__informacion-producto__imagen-producto"><img src="assets/img/sonic_lost_world.jpg" alt="Sonic Lost World" class="cuerpo2__informacion-producto__imagen-producto__imagen"></a>
+                    <a href="assets/img/sonic_lost_world.jpg" ><img src="assets/img/sonic_lost_world.jpg" alt="Sonic Lost World" class="cuerpo2__informacion-producto__imagen-producto"></a>
                     <article class="cuerpo2__informacion-producto__descripcion-producto">
                         <h3 class="cuerpo2__informacion-producto__descripcion-producto__nombre-producto">Sonic lost world</h3>
                         <p class="cuerpo2__informacion-producto__descripcion-producto__descripcion">Sonic Lost World es un videojuego de plataformas en la serie Sonic the Hedgehog lanzado exclusivamente para Wii U y Nintendo 3DS el 18 de Octubre de 2013 en Europa, el 24 de Octubre en Japón y el 29 de Octubre en Norte América. El juego fue desarrollado por Sonic Team para Wii U y Dimps para Nintendo 3DS</p>
                         <p class="cuerpo2__informacion-producto__descripcion-producto__descripcion">Al estar en una persecución con el Dr. Eggman, Sonic y Tails llegan a un mundo perdido conocido como Lost Hex donde descubren que Eggman se ha aliado con una raza alienígena que se hacen llamar Deadly Six.</p>
-                        <p class="cuerpo2__informacion-producto__boton"><a href="./pagina_de_productos.html" class="cuerpo2__informacion-producto__boton__regreso">volver</a></p>
+                        <p><a href="./pagina_de_productos.html" class="cuerpo2__informacion-producto__boton">volver</a></p>
                     </article>
                 </section>
                 <h2 class="cuerpo2__titulo">OTROS PRODUCTOS</h2>
                 <section class="cuerpo2__productos">
                     <article class="cuerpo2__productos__producto">
                         <a href="assets/img/sonic_unleashed.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_unleashed.jpg" alt="Sonic Unleashed" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_unleashed.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic unleashed</a></h3>
+                        <h3><a href="./sonic_unleashed.html" class="cuerpo2__productos__producto__boton">Sonic unleashed</a></h3>
                     </article>
                     <article class="cuerpo2__productos__producto">
                         <a href="assets/img/sonic_mania.png" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_mania.png" alt="Sonic Mania" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_mania.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic mania</a></h3>
+                        <h3><a href="./sonic_mania.html" class="cuerpo2__productos__producto__boton">Sonic mania</a></h3>
                     </article>
                 </section>
                 <section class="cuerpo2__productos">
                     <article class="cuerpo2__productos__producto">
                         <a href="assets/img/sonic_superstars.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_superstars.jpg" alt="Sonic Superstars" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_superstars.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic superstars</a></h3>
+                        <h3><a href="./sonic_superstars.html" class="cuerpo2__productos__producto__boton">Sonic superstars</a></h3>
                     </article>
                     <article class="cuerpo2__productos__producto">
                         <a href="assets/img/sonic_forces.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_forces.jpg" alt="Sonic Forces" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_forces.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic forces</a></h3>
+                        <h3><a href="./sonic_forces.html" class="cuerpo2__productos__producto__boton">Sonic forces</a></h3>
                     </article>
                 </section>
             </main>
