--- a/sonic_mania.html
+++ b/sonic_mania.html
@@ -31,33 +31,33 @@
             </header>
             <main class="cuerpo2">
                 <section class="cuerpo2__informacion-producto">
-                    <a href="assets/img/sonic_mania.png"  class="cuerpo2__informacion-producto__imagen-producto"><img src="assets/img/sonic_mania.png" alt="Sonic Mania" class="cuerpo2__informacion-producto__imagen-producto__imagen"></a>
+                    <a href="assets/img/sonic_mania.png" ><img src="assets/img/sonic_mania.png" alt="Sonic Mania" class="cuerpo2__informacion-producto__imagen-producto"></a>
                     <article class="cuerpo2__informacion-producto__descripcion-producto">
                         <h3 class="cuerpo2__informacion-producto__descripcion-producto__nombre-producto">Sonic mania</h3>
                         <p class="cuerpo2__informacion-producto__descripcion-producto__descripcion">Sonic Mania es un videojuego de plataformas estilo side-scroll perteneciente a la franquicia de Sonic the Hedgehog, el juego fue desarrollado como parte del 25° aniversario de la saga. Ubicado en el mundo de Classic Sonic, el juego sigue la historia de Sonic the Hedgehog, Miles "Tails" Prower y Knuckles the Echidna por detener al Dr. Eggman y sus nuevas creaciones los Hard Boiled Heavies que buscan aprovecharse de una nueva fuente de energía.</p>
                         <p class="cuerpo2__informacion-producto__descripcion-producto__descripcion">Sonic Mania ha sido desarrollado por Christian Whitehead que ha trabajado anteriormente en ports de juegos clásicos en conjunto con Headcannon y PagodaWest Games, el juego emula la jugabilidad y la animación de sprites 2D de los originales juegos de Sonic de la Sega Mega Drive/Genesis. Este junto con Sonic Forces son considerados la "continuación del 25 aniversario de Sonic". El juego fue anunciado oficialmente el día 22 de julio de 2016, este fue finalmente lanzado el día 15 de agosto de 2017 para las consolas Nintendo Switch, Xbox One y PlayStation 4 y el 29 de agosto de 2017 para PC.</p>
-                        <p class="cuerpo2__informacion-producto__boton"><a href="./pagina_de_productos.html" class="cuerpo2__informacion-producto__boton__regreso">volver</a></p>
+                        <p><a href="./pagina_de_productos.html" class="cuerpo2__informacion-producto__boton">volver</a></p>
                     </article>
                 </section>
                 <h2 class="cuerpo2__titulo">OTROS PRODUCTOS</h2>
                 <section class="cuerpo2__productos">
                     <article class="cuerpo2__productos__producto">
                         <a href="assets/img/sonic_frontiers.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_frontiers.jpg" alt="Sonic Frontiers" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_frontiers.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic frontiers</a></h3>
+                        <h3><a href="./sonic_frontiers.html" class="cuerpo2__productos__producto__boton">Sonic frontiers</a></h3>
                     </article>
                     <article class="cuerpo2__productos__producto">
                         <a href="assets/img/sonic_x_shadow_generations.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_x_shadow_generations.jpg" alt="Sonic X Shadow Generations" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_x_shadow_generations.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic y Shadow generations</a></h3>
+                        <h3><a href="./sonic_x_shadow_generations.html" class="cuerpo2__productos__producto__boton">Sonic y Shadow generations</a></h3>
                     </article>
                 </section>
                 <section class="cuerpo2__productos">
                     <article class="cuerpo2__productos__producto">
                         <a href="assets/img/sonic_colors.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_colors.jpg" alt="Sonic Colors" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_colors.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic colors</a></h3>
+                        <h3><a href="./sonic_colors.html" class="cuerpo2__productos__producto__boton">Sonic colors</a></h3>
                     </article>
                     <article class="cuerpo2__productos__producto">
                         <a href="assets/img/sonic_lost_world.jpg" class="cuerpo2__productos__producto__imagen-producto"><img src="assets/img/sonic_lost_world.jpg" alt="Sonic Lost World" class="cuerpo2__productos__producto__imagen-producto__imagen"></a>
-                        <h3 class="cuerpo2__productos__producto__boton"><a href="./sonic_lost_world.html" class="cuerpo2__productos__producto__boton__nombre-producto">Sonic lost world</a></h3>
+                        <h3><a href="./sonic_lost_world.html" class="cuerpo2__productos__producto__boton">Sonic lost world</a></h3>
                     </article>
                 </section>
             </main>
